fix: add pgbouncer

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
-POSTGRES_PASSWORD=darkstardb
+POSTGRES_ROOT_PASSWORD=darkstardb
 POSTGRES_PORTS=127.0.0.1:54320:5432
+POSTGRES_USERNAME=appuser
+POSTGRES_PASSWORD=password
+PGBOUNCER_USER=pgbouncer
+PGBOUNCER_PASSWORD=password
+PGBOUNCER_PORTS=127.0.0.1:64320:6432
