--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,15 +18,14 @@ services:
   pgbouncer:
     image: bitnami/pgbouncer:1.24.1-debian-12-r10
     environment:
-      PGBOUNCER_USER: "${PGBOUNCER_USER}"
-      PGBOUNCER_PASSWORD: "${PGBOUNCER_PASSWORD}"
-      PGBOUNCER_AUTH_TYPE: "scram-sha-256"
+      PGBOUNCER_AUTH_USER: "${PGBOUNCER_USER}"
+      PGBOUNCER_AUTH_TYPE: "md5"
       PGBOUNCER_POOL_MODE: "transaction"
-      PGBOUNCER_PORT: 6432
       POSTGRESQL_HOST: "db"
-      POSTGRESQL_PORT: 5432
       POSTGRESQL_USERNAME: "${POSTGRES_USERNAME}"
       POSTGRESQL_PASSWORD: "${POSTGRES_PASSWORD}"
+    volumes:
+      - ./pgbouncer.ini:/bitnami/pgbouncer/conf/pgbouncer.ini:ro
     ports:
       - "${PGBOUNCER_PORTS}"
     depends_on:
