--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,12 +16,14 @@ services:
       - pgsqlnet
 
   pgbouncer:
-    image: bitnami/pgbouncer:1.24.1-debian-12-r10
+    image: edoburu/pgbouncer:v1.24.1-p1
     environment:
-      POSTGRESQL_USERNAME: "${POSTGRES_USERNAME}"
-      POSTGRESQL_PASSWORD: "${POSTGRES_PASSWORD}"
-    volumes:
-      - ./pgbouncer.ini:/opt/bitnami/pgbouncer/conf/pgbouncer.ini:ro
+      DB_HOST: "db"
+      DB_USER: "${POSTGRES_USERNAME}"
+      DB_PASSWORD: "${POSTGRES_PASSWORD}"
+      LISTEN_PORT: 6432
+      AUTH_TYPE: "scram-sha-256"
+      POOL_MODE: "transaction"
     ports:
       - "${PGBOUNCER_PORTS}"
     depends_on:
